Messing with fixed background support on mobile

--- a/style.css
+++ b/style.css
@@ -19,6 +19,22 @@ body {
 	background-size: cover;
 }
 
+.backgroundFixed:before {
+	content: "";
+	display: block;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -10;
+	background: url(content/comp_blur.jpg) no-repeat center center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
 .roundedHeaderText {
 	border-radius: 5px;
 	color: white;
@@ -325,11 +341,11 @@ body {
 }
 
 .spacer-Skills {
-	background-image: url(content/bg1.png);
+	/*background-image: url(content/bg1.png);*/
 }
 
 .spacer-Portfolio {
-	background-image: url(content/bg2.jpg);
+	/*background-image: url(content/bg2.jpg);*/
 }
 
 /* Contact Section */
